# secure-password-app

./: .prettierrc  LICENSE.md  README.md  index.html  package.json  vite.config.ts
src/: App.tsx  main.tsx  utils.ts
src-tauri/: .env  .gitignore  Cargo.toml  db.sqlite3  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/db/: Cargo.toml
src-tauri/db/src/: lib.rs
src-tauri/db/src/entities/: password.rs
src-tauri/db/src/repositories/: password.rs
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20251216_212010_add_name_to_password.rs
src-tauri/src/: lib.rs  main.rs  schemas.rs
src-tauri/src/services/: aes.rs  auth.rs  mod.rs  password.rs
src/components/: LabelPassword.tsx
src/pages/: DonatePage.tsx  ListPasswordsPage.tsx  MainPage.tsx  RootLayout.tsx
src/utils/: notify.ts
